--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
         margin: 0;
         padding: 0;
-        background: url('statedelic.jpeg') center center / cover no-repeat fixed;
+        background: url('statedelic.jpg') center center / cover no-repeat fixed;
         color: #f1f1f1;
         font-family: "Courier New", monospace;
         letter-spacing: 2px;
@@ -58,4 +58,5 @@ body::after {
 
 </body>
 </html>
+
 
