--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         margin: 0;
         padding: 0;
         background: url('statedelic.jpg') center center / cover no-repeat fixed;
-        color: #dfb95a; /* gold */
+        color: #dfb95a;
         font-family: "Courier New", monospace;
         letter-spacing: 2px;
         height: 100vh;
-        overflow: hidden; /* ✅ no scrolling */
+        overflow: hidden; /* no scroll */
     }
 
-    /* Dark overlay */
+    /* Dark overlay to keep text readable */
     body::after {
         content: "";
         position: fixed;
@@ -27,22 +27,44 @@
         z-index: -1;
     }
 
-    /* Flex container for perfect top/middle/bottom placement */
+    /* Positioning container */
     .layout {
+        position: relative;
+        width: 100%;
         height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between; /* ✅ aligns top / middle / bottom */
-        align-items: center;
-        padding: 40px 0; /* lightweight spacing, no scroll */
     }
 
+    /* Top text */
+    .top {
+        position: absolute;
+        top: 18%; /* adjust up/down */
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    /* Middle text */
+    .middle {
+        position: absolute;
+        top: 50%; /* adjust slightly for perfect centering */
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    /* Bottom text */
+    .bottom {
+        position: absolute;
+        bottom: 18%; /* adjust up/down */
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    /* Text styling */
     .section {
-        font-size: 42px; /* ✅ bigger text */
-        transition: 0.35s;
+        font-size: 42px;
         text-decoration: none;
         color: #dfb95a;
         cursor: pointer;
+        transition: 0.35s;
     }
 
     .section:hover {
@@ -55,11 +77,11 @@
 
 <div class="layout">
 
-    <a href="soitbegins.html" class="section">SO IT BEGINS</a>
+    <a href="soitbegins.html" class="section top">SO IT BEGINS</a>
 
-    <a href="static.html" class="section">S T A T ! C : : rEs0n4ncE_r1s!ng</a>
+    <a href="static.html" class="section middle">S T A T ! C : : rEs0n4ncE_r1s!ng</a>
 
-    <a href="drew.html" class="section">DREW</a>
+    <a href="drew.html" class="section bottom">DREW</a>
 
 </div>
 
