--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         margin: 0;
         padding: 0;
         background: url('statedelic.jpg') center center / cover no-repeat fixed;
-        color: #dfb95a;
+        color: #ffffff;
         font-family: "Courier New", monospace;
-        letter-spacing: 2px;
+        letter-spacing: 3px;
         height: 100vh;
         overflow: hidden; /* no scroll */
     }
 
-    /* Dark overlay to keep text readable */
+    /* Dark overlay to help text stand out */
     body::after {
         content: "";
         position: fixed;
@@ -27,49 +27,51 @@
         z-index: -1;
     }
 
-    /* Positioning container */
     .layout {
         position: relative;
         width: 100%;
         height: 100vh;
     }
 
-    /* Top text */
+    /* Top */
     .top {
         position: absolute;
-        top: 18%; /* adjust up/down */
+        top: 20%; /* adjust up/down */
         left: 50%;
         transform: translateX(-50%);
+        font-size: 42px;
     }
 
-    /* Middle text */
+    /* Middle (main focus) */
     .middle {
         position: absolute;
-        top: 50%; /* adjust slightly for perfect centering */
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        font-size: 110px; /* <- MAIN SIZE */
+        letter-spacing: 10px;
     }
 
-    /* Bottom text */
+    /* Bottom */
     .bottom {
         position: absolute;
-        bottom: 18%; /* adjust up/down */
+        bottom: 22%; /* adjust up/down */
         left: 50%;
         transform: translateX(-50%);
+        font-size: 42px;
     }
 
-    /* Text styling */
+    /* Hover styling (soft and clean) */
     .section {
-        font-size: 42px;
         text-decoration: none;
-        color: #dfb95a;
-        cursor: pointer;
+        color: #ffffff;
         transition: 0.35s;
+        cursor: pointer;
     }
 
     .section:hover {
-        letter-spacing: 8px;
-        filter: brightness(1.4);
+        filter: brightness(1.7);
+        letter-spacing: 12px;
     }
 </style>
 </head>
@@ -79,7 +81,7 @@
 
     <a href="soitbegins.html" class="section top">SO IT BEGINS</a>
 
-    <a href="static.html" class="section middle">S T A T ! C : : rEs0n4ncE_r1s!ng</a>
+    <a href="static.html" class="section middle">S T A T ! C</a>
 
     <a href="drew.html" class="section bottom">DREW</a>
 
