--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
         margin: 0;
         padding: 0;
         background: url('statedelic.jpg') center center / cover no-repeat fixed;
-        color: #ffffff;
-        font-family: "Courier New", monospace;
-        letter-spacing: 3px;
         height: 100vh;
-        overflow: hidden; /* no scroll */
+        overflow: hidden;
+        position: relative;
     }
 
-    /* Overlay for readability */
+    /* Dark overlay */
     body::after {
         content: "";
         position: fixed;
@@ -27,62 +25,47 @@
         z-index: -1;
     }
 
-    .layout {
-        position: relative;
-        width: 100%;
-        height: 100vh;
-    }
-
-    /* All text same size */
-    .section {
-        font-size: 70px; /* <-- Change this to make all text bigger/smaller */
-        text-decoration: none;
-        color: #ffffff;
-        transition: 0.35s;
-        cursor: pointer;
-    }
-
-    /* Top */
-    .top {
-        position: absolute;
-        top: 14%; /* <-- move up/down */
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    /* Middle */
-    .middle {
+    /* Invisible clickable portal */
+    .portal-zone {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        width: 40vh;
+        height: 40vh;
+        border-radius: 50%;
+        cursor: pointer;
+        z-index: 5;
     }
 
-    /* Bottom */
-    .bottom {
-        position: absolute;
-        bottom: 12%; /* <-- move up/down */
-        left: 50%;
-        transform: translateX(-50%);
-    }
-
-    .section:hover {
-        letter-spacing: 10px;
-        filter: brightness(1.5);
+    /* The shimmer layer */
+    #shimmer {
+        pointer-events: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 2;
+        background: radial-gradient(circle at center, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 40%, rgba(255,255,255,0) 80%);
+        transition: background 0.08s linear;
     }
 </style>
 </head>
 <body>
 
-<div class="layout">
+<!-- Shimmer overlay -->
+<div id="shimmer"></div>
 
-    <a href="soitbegins.html" class="section top">SO IT BEGINS</a>
+<!-- Portal click target -->
+<a href="static.html" class="portal-zone"></a>
 
-    <a href="static.html" class="section middle">S T A T ! C</a>
-
-    <a href="drew.html" class="section bottom">DREW</a>
-
-</div>
+<script>
+document.addEventListener("mousemove", function(e) {
+    const shimmer = document.getElementById("shimmer");
+    shimmer.style.background = `radial-gradient(circle at ${e.clientX}px ${e.clientY}px, rgba(255,255,255,0.23) 0%, rgba(255,255,255,0.05) 12%, rgba(255,255,255,0) 40%)`;
+});
+</script>
 
 </body>
 </html>
