--- a/index.html
+++ b/index.html
@@ -16,61 +16,93 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: "Courier New", monospace;
         position: relative;
+        font-family: "Courier New", monospace;
     }
 
-    /* Dark overlay */
+    /* Dark overlay to make text readable on any background brightness */
     body::after {
         content: "";
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        inset: 0;
         background: rgba(0,0,0,0.45);
         z-index: -1;
     }
 
-    /* The text */
+    /* MAIN TEXT */
     .static-text {
-        font-size: 90px;
-        color: white;
-        letter-spacing: 14px;
-        cursor: pointer;
+        font-size: clamp(32px, 10vw, 110px); /* ✅ responsive size */
+        letter-spacing: clamp(6px, 2vw, 22px); /* ✅ responsive spacing */
+        color: #ffffff;
         text-decoration: none;
+        cursor: pointer;
         position: relative;
-        animation: glitch 1.8s infinite;
+        animation: glitch 2.2s infinite steps(2, end);
     }
 
-    /* Glitch effect */
+    /* GLITCH LAYERS */
+    .static-text::before,
+    .static-text::after {
+        content: "S T A T ! C";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        overflow: hidden;
+        clip-path: inset(0);
+    }
+
+    /* Red channel tear */
+    .static-text::before {
+        color: #ff004d;
+        animation: glitchBefore 1.5s infinite;
+        opacity: 0.6;
+    }
+
+    /* Cyan channel tear */
+    .static-text::after {
+        color: #00eaff;
+        animation: glitchAfter 1.5s infinite;
+        opacity: 0.6;
+    }
+
     @keyframes glitch {
-        0% { text-shadow: 0 0 0px #fff; }
-        8% { text-shadow: 2px 0px #ff004d; }
-        12% { text-shadow: -2px 0px #00eaff; }
-        16% { text-shadow: 3px 0px #ff004d; }
-        20% { text-shadow: -3px 0px #00eaff; }
-        22% { text-shadow: 0px 0px #fff; }
-        42% { text-shadow: 1px 0px #ff004d; }
-        45% { text-shadow: -1px 0px #00eaff; }
-        50% { text-shadow: 0 0 0px #fff; }
-        100% { text-shadow: 0 0 0px #fff; }
+        0% { transform: none; }
+        8% { transform: translate(2px, -2px); }
+        12% { transform: translate(-3px, 2px); }
+        18% { transform: translate(1px, -1px); }
+        22% { transform: none; }
+        48% { transform: translate(-2px, 1px); }
+        52% { transform: translate(3px, 0px); }
+        55% { transform: none; }
+        100% { transform: none; }
     }
 
-    /* On hover → stronger distortion */
+    @keyframes glitchBefore {
+        0% { clip-path: inset(0 0 80% 0); transform: translate(-2px, -1px); }
+        20% { clip-path: inset(20% 0 60% 0); transform: translate(2px, 1px); }
+        40% { clip-path: inset(40% 0 40% 0); transform: translate(-1px, 2px); }
+        60% { clip-path: inset(60% 0 20% 0); transform: translate(1px, -2px); }
+        80% { clip-path: inset(80% 0 0 0); transform: translate(-2px, 1px); }
+        100% { clip-path: inset(0 0 80% 0); transform: translate(0,0); }
+    }
+
+    @keyframes glitchAfter {
+        0% { clip-path: inset(0 0 80% 0); transform: translate(2px, 1px); }
+        20% { clip-path: inset(80% 0 0 0); transform: translate(-2px, -1px); }
+        40% { clip-path: inset(60% 0 20% 0); transform: translate(1px, -2px); }
+        60% { clip-path: inset(40% 0 40% 0); transform: translate(-1px, 1px); }
+        80% { clip-path: inset(20% 0 60% 0); transform: translate(2px, -1px); }
+        100% { clip-path: inset(0 0 80% 0); transform: translate(0,0); }
+    }
+
+    /* Soft hover effect */
     .static-text:hover {
-        animation: glitchHover 0.4s infinite;
-    }
-
-    @keyframes glitchHover {
-        0% { text-shadow: 0px 0px #fff; }
-        33% { text-shadow: 4px 0px #ff004d; }
-        66% { text-shadow: -4px 0px #00eaff; }
-        100% { text-shadow: 0px 0px #fff; }
+        filter: brightness(1.9);
     }
 </style>
-
 </head>
+
 <body>
 
 <a href="static.html" class="static-text">S T A T ! C</a>
