--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         font-family: "Courier New", monospace;
     }
 
-    /* Dark overlay to make text readable on any background brightness */
     body::after {
         content: "";
         position: fixed;
@@ -29,83 +28,94 @@
         z-index: -1;
     }
 
-    /* MAIN TEXT */
     .static-text {
-        font-size: clamp(32px, 10vw, 110px); /* ✅ responsive size */
-        letter-spacing: clamp(6px, 2vw, 22px); /* ✅ responsive spacing */
-        color: #ffffff;
+        font-size: clamp(40px, 11vw, 150px);
+        letter-spacing: clamp(6px, 2vw, 22px);
+        color: white;
         text-decoration: none;
         cursor: pointer;
         position: relative;
-        animation: glitch 2.2s infinite steps(2, end);
+        animation: flicker 1.6s infinite steps(2, end);
     }
 
-    /* GLITCH LAYERS */
+    /* HOT PINK */
     .static-text::before,
-    .static-text::after {
+    .static-text::after,
+    .static-text::nth-layer {
         content: "S T A T ! C";
         position: absolute;
-        left: 0;
-        top: 0;
+        left: 0; top: 0;
         width: 100%;
-        overflow: hidden;
-        clip-path: inset(0);
+        opacity: 0.85;
+        mix-blend-mode: screen;
     }
 
-    /* Red channel tear */
     .static-text::before {
-        color: #ff004d;
-        animation: glitchBefore 1.5s infinite;
-        opacity: 0.6;
+        color: #ff2bff;
+        animation: slice1 1.2s infinite;
     }
 
-    /* Cyan channel tear */
     .static-text::after {
-        color: #00eaff;
-        animation: glitchAfter 1.5s infinite;
-        opacity: 0.6;
+        color: #00f6ff;
+        animation: slice2 1.4s infinite;
     }
 
-    @keyframes glitch {
-        0% { transform: none; }
-        8% { transform: translate(2px, -2px); }
-        12% { transform: translate(-3px, 2px); }
-        18% { transform: translate(1px, -1px); }
-        22% { transform: none; }
-        48% { transform: translate(-2px, 1px); }
-        52% { transform: translate(3px, 0px); }
-        55% { transform: none; }
-        100% { transform: none; }
+    .nth-layer {
+        color: #39ff14;
+        animation: slice3 1.3s infinite;
     }
 
-    @keyframes glitchBefore {
-        0% { clip-path: inset(0 0 80% 0); transform: translate(-2px, -1px); }
-        20% { clip-path: inset(20% 0 60% 0); transform: translate(2px, 1px); }
-        40% { clip-path: inset(40% 0 40% 0); transform: translate(-1px, 2px); }
-        60% { clip-path: inset(60% 0 20% 0); transform: translate(1px, -2px); }
-        80% { clip-path: inset(80% 0 0 0); transform: translate(-2px, 1px); }
-        100% { clip-path: inset(0 0 80% 0); transform: translate(0,0); }
-    }
-
-    @keyframes glitchAfter {
-        0% { clip-path: inset(0 0 80% 0); transform: translate(2px, 1px); }
-        20% { clip-path: inset(80% 0 0 0); transform: translate(-2px, -1px); }
-        40% { clip-path: inset(60% 0 20% 0); transform: translate(1px, -2px); }
-        60% { clip-path: inset(40% 0 40% 0); transform: translate(-1px, 1px); }
-        80% { clip-path: inset(20% 0 60% 0); transform: translate(2px, -1px); }
-        100% { clip-path: inset(0 0 80% 0); transform: translate(0,0); }
-    }
-
-    /* Soft hover effect */
-    .static-text:hover {
-        filter: brightness(1.9);
-    }
+    /* We attach the 4th color in JS so we can flicker it */
 </style>
 </head>
 
 <body>
 
 <a href="static.html" class="static-text">S T A T ! C</a>
+<div class="nth-layer" style="pointer-events:none;"></div>
+
+<script>
+/* Add the 4th neon layer dynamically */
+const txt = document.querySelector(".static-text");
+const layer4 = document.createElement("div");
+layer4.className = "nth-layer";
+layer4.innerText = "S T A T ! C";
+layer4.style.color = "#fff82b"; /* Neon Yellow */
+layer4.style.position = "absolute";
+layer4.style.left = "50%";
+layer4.style.top = "50%";
+layer4.style.transform = "translate(-50%, -50%)";
+layer4.style.mixBlendMode = "screen";
+document.body.appendChild(layer4);
+
+/* Keyframes injected at runtime (cleaner render) */
+const style = document.createElement("style");
+style.innerHTML = `
+@keyframes flicker {
+    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% { opacity: 1; }
+    20%, 24%, 55% { opacity: 0.4; }
+}
+
+@keyframes slice1 {
+  0% { clip-path: inset(0 0 85% 0); transform: translate(-2px, -2px); }
+  50% { clip-path: inset(40% 0 40% 0); transform: translate(2px, 1px); }
+  100% { clip-path: inset(80% 0 10% 0); transform: translate(-1px, 2px); }
+}
+
+@keyframes slice2 {
+  0% { clip-path: inset(80% 0 0 0); transform: translate(2px, 2px); }
+  50% { clip-path: inset(30% 0 50% 0); transform: translate(-3px, -1px); }
+  100% { clip-path: inset(50% 0 20% 0); transform: translate(1px, -2px); }
+}
+
+@keyframes slice3 {
+  0% { clip-path: inset(60% 0 10% 0); transform: translate(-1px, 1px); }
+  50% { clip-path: inset(10% 0 60% 0); transform: translate(3px, -2px); }
+  100% { clip-path: inset(0 0 85% 0); transform: translate(-2px, 0); }
+}
+`;
+document.head.appendChild(style);
+</script>
 
 </body>
 </html>
