--- a/index.html
+++ b/index.html
@@ -16,34 +16,31 @@
         justify-content: center;
         align-items: center;
         font-family: "Courier New", monospace;
-        background: #111;
+        background: black;
         position: relative;
         touch-action: manipulation;
     }
 
-    /* ✅ Real TV STATIC background layer */
+    /* ✅ REAL STATIC IMAGE BACKGROUND (static.jpeg) */
     body::before {
         content: "";
         position: fixed;
         inset: 0;
-        background: 
-            repeating-radial-gradient(circle, #fff 0 1px, transparent 1px 3px),
-            repeating-linear-gradient(90deg, #fff 0 1px, transparent 1px 3px),
-            repeating-linear-gradient(#fff 0 1px, transparent 1px 3px);
-        opacity: 0.23;   /* static strength */
-        mix-blend-mode: screen;
-        animation: staticNoise 0.08s steps(8) infinite;
+        background: url('static.jpeg') center center / cover no-repeat;
+        filter: contrast(1.4) brightness(1.1);
+        opacity: 1;
+        animation: tvJitter .28s steps(2) infinite;
+        z-index: -1;
     }
 
-    @keyframes staticNoise {
+    @keyframes tvJitter {
         0% { transform: translate(0,0); }
-        25% { transform: translate(-1%, 2%); }
-        50% { transform: translate(2%, -1%); }
-        75% { transform: translate(-2%, -2%); }
+        25% { transform: translate(-1px, 1px); }
+        50% { transform: translate(1px, -1px); }
+        75% { transform: translate(-1px, -1px); }
         100% { transform: translate(0,0); }
     }
 
-    /* ✅ Main word */
     .static-text {
         font-size: clamp(40px, 12vw, 160px);
         letter-spacing: clamp(6px, 2vw, 22px);
@@ -54,14 +51,13 @@
         display: flex;
         gap: clamp(6px, 1vw, 12px);
         position: relative;
-        z-index: 5; /* always above static */
+        z-index: 10;
     }
 
-    /* Flickering characters */
     .char {
         display: inline-block;
         transition: 0.1s ease-out;
-        animation: drift 0.9s infinite ease-in-out alternate;
+        animation: drift 1s infinite alternate ease-in-out;
     }
 
     @keyframes drift {
@@ -76,7 +72,6 @@
 <a href="static.html" class="static-text" id="glitchWord">S T A T ! C</a>
 
 <script>
-/* Character flicker map */
 const glyphs = {
   "S": ["S","5","§","$","Ś"],
   "T": ["T","7","┼","†"],
@@ -108,7 +103,6 @@ function rainFlicker() {
   });
 }
 
-/* ✅ "Rain" flicker speed — lower = faster */
 setInterval(rainFlicker, 200);
 </script>
 
